# netflix_UX_DE_collaboration_visualization_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/processed/: nordic_weekly.xlsx
documentation/: dataset_explain.md  netflix_schema.md  workflow_guide.md
eda/: 01_global_weekly_eda.ipynb  01a_global_weekly_eda_aira.ipynb  02_global_alltime_eda.ipynb  02_global_alltime_eda_aira.ipynb  03_country_weekly.ipynb  04_netflix_merged_eda.ipynb  05_netflix_eda_aira.ipynb  05_netflix_merged_eda_chris.ipynb  05_netflix_merged_eda_christophe.ipynb
notebooks/: 01_load_global_alltime_eda.ipynb  02_netflix_final.ipynb
src/: filter_nordics.py  merge_netflix_data.ipynb
src/data_processing/: main.py
