[project]
name = "netflix-analytics-de-ux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0,<3",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "streamlit>=1.45.0",
]
